Prevent 404 on link in menu with sub pages
See https://github.com/getgrav/grav-theme-antimatter/issues/103 .

--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -3,7 +3,7 @@
         {% set current_page = (p.active or p.activeChild) ? 'current-page-item' : '' %}
         {% if p.children.visible.count > 0 %}
             <li class="has-children {{ current_page }}">
-                <a href="{{ p.url }}">
+                <a href="{% if p.routable %}{{ p.url }}{% else %}#{% endif %}">
                     {% if p.header.icon %}<i class="fa fa-{{ p.header.icon }}"></i>{% endif %}
                     {{ p.menu }}
                 </a>
